[project]
name = "langgraph-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=1.2.0",
    "langchain-google-genai>=4.1.1",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.0.5",
    "notebook>=7.5.1",
    "python-dotenv>=1.2.1",
]
